--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "ua-parser-js": "^2.0.8",
     "uuid": "^13.0.0",
     "zod": "^4.3.5"
   },
