--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "babel-plugin-react-compiler": "^1.0.0",
+    "botid": "^1.5.10",
     "clsx": "^2.1.1",
     "geist": "^1.5.1",
     "next": "^16.1.4",
