refactor: Streamline form components by consolidating draft retrieval logic and enhancing state management, improving readability and maintainability

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -188,6 +188,12 @@
       "rules": {
         "no-console": "off"
       }
+    },
+    {
+      "files": ["**/GlobalPlayerProvider.tsx"],
+      "rules": {
+        "react/iframe-missing-sandbox": "off"
+      }
     }
   ],
   "ignorePatterns": [
