--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.20",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "babel-plugin-react-compiler": "^1.0.0",
