--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "prepublish": "oxlint --fix . && oxfmt --write . && tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource-variable/onest": "^5.2.11",
+    "@fontsource-variable/outfit": "^5.2.8",
     "@neondatabase/serverless": "^1.0.2",
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
