feat: add Check-In and Watch Later pages with client

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 BNF_NEON_DATABASE_URL=
 BNF_HEARTS_SALT=
+BNF_CHECKIN_SECRET=
 BNF_TURNSTILE_SECRET_KEY=
 NEXT_PUBLIC_BNF_TURNSTILE_SITE_KEY=
 BNF_RESEND_API_KEY=
