--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "^16.1.4",
     "next-intl": "^4.7.0",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-redux": "^9.2.0",
@@ -48,6 +49,7 @@
     "@stylistic/eslint-plugin": "^5.7.1",
     "@types/mustache": "^4.2.6",
     "@types/node": "^25.0.10",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/parser": "^8.53.1",
