feat: implement event check-in feature with QR code scanning, user authentication, and check-in history display

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "botid": "^1.5.10",
     "clsx": "^2.1.1",
     "geist": "^1.5.1",
+    "html5-qrcode": "^2.3.8",
     "jose": "^6.1.3",
     "mustache": "^4.2.0",
     "next": "^16.1.4",
