--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "html5-qrcode": "^2.3.8",
     "jose": "^6.1.3",
     "mustache": "^4.2.0",
-    "next": "^16.1.4",
+    "next": "^16.1.5",
     "next-intl": "^4.7.0",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-redux": "^9.2.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
@@ -50,10 +50,11 @@
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/parser": "^8.53.1",
+    "@typescript-eslint/parser": "^8.54.0",
+    "cssnano": "^7.1.2",
     "eslint": "^9.39.2",
     "oxfmt": "^0.26.0",
-    "oxlint": "^1.41.0",
+    "oxlint": "^1.42.0",
     "typescript": "^5.9.3"
   },
   "next-intl": {
