feat: implement WebAuthn for Passkeys support

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ BNF_JWT_ISSUER=
 BNF_JWT_AUDIENCE=
 BNF_JWT_KEY_ID=
 BNF_LOG_SALT=
+BNF_WEBAUTHN_RP_ID=localhost
+BNF_WEBAUTHN_RP_NAME=Bonfire
+BNF_WEBAUTHN_ORIGIN=http://localhost:3000
