--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zet-homepage-web",
-  "version": "2.0.0",
+  "name": "bnf-homepage-web",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -19,6 +19,8 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@reduxjs/toolkit": "^2.11.2",
+    "@simplewebauthn/browser": "^13.2.2",
+    "@simplewebauthn/server": "^13.2.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "@vercel/analytics": "^1.6.1",
@@ -48,7 +50,7 @@
     "@types/mustache": "^4.2.6",
     "@types/node": "^25.0.10",
     "@types/qrcode": "^1.5.6",
-    "@types/react": "^19.2.9",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/parser": "^8.54.0",
     "cssnano": "^7.1.2",
