--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "botid": "^1.5.10",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
     "geist": "^1.5.1",
     "html5-qrcode": "^2.3.8",
     "jose": "^6.1.3",
@@ -54,6 +55,8 @@
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/parser": "^8.54.0",
     "cssnano": "^7.1.2",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "oxfmt": "^0.26.0",
     "oxlint": "^1.42.0",
