feat: add cron job for cleanup of expired authentication and passkey challenges

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -230,6 +230,7 @@
     "build/**",
     "*.min.js",
     "coverage/**",
-    "scripts/**"
+    "scripts/**",
+    "db/drizzle/migrations/**"
   ]
 }
