--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install deps
         run: bun install --frozen-lockfile
 
+      - name: TypeScript typecheck
+        run: bun run typecheck
+
       - name: Run Drizzle migrations
         env:
           BNF_NEON_DATABASE_URL: ${{ secrets.BNF_NEON_DATABASE_URL_PROD }}
