--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ BNF_WEBAUTHN_RP_ID=localhost
 BNF_WEBAUTHN_RP_NAME=Bonfire
 BNF_WEBAUTHN_ORIGIN=http://localhost:3000
 CRON_SECRET=
+BNF_ROLLBAR_SERVER_TOKEN=
+NEXT_PUBLIC_BNF_ROLLBAR_CLIENT_TOKEN=
