--- a/package.json
+++ b/package.json
@@ -8,17 +8,14 @@
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "lint": "oxlint .",
-    "fix": "oxlint --fix .",
-    "format": "oxfmt --check .",
-    "format:write": "oxfmt --write .",
-    "check": "oxlint --fix . && oxfmt --write .",
-    "clean": "bun pm cache rm && rm -rf node_modules bun.lock && bun install",
-    "prepublish": "oxlint --fix . && oxfmt --write . && tsc --noEmit"
+    "check": "oxlint . && oxfmt --check . && tsc --noEmit",
+    "fix": "oxlint --fix . && oxfmt --write .",
+    "clean": "bun pm cache rm && rm -rf node_modules bun.lock && bun install"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@reduxjs/toolkit": "^2.11.2",
+    "@rollbar/react": "^1.0.0",
     "@simplewebauthn/browser": "^13.2.2",
     "@simplewebauthn/server": "^13.2.2",
     "@tailwindcss/postcss": "^4.1.18",
@@ -40,6 +37,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-redux": "^9.2.0",
+    "rollbar": "^2.26.5",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
