feat: add health check API endpoint

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ BNF_WEBAUTHN_ORIGIN=http://localhost:3000
 CRON_SECRET=
 BNF_ROLLBAR_SERVER_TOKEN=
 NEXT_PUBLIC_BNF_ROLLBAR_CLIENT_TOKEN=
+BNF_VERSION=
