chore: streamline production release workflow by replacing TypeScript typecheck and lint steps with a unified quality check

--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -32,11 +32,8 @@ jobs:
       - name: Install deps
         run: bun install --frozen-lockfile
 
-      - name: TypeScript typecheck
-        run: bun run typecheck
-
-      - name: Lint
-        run: bun run lint
+      - name: Quality check
+        run: bun run check
 
       - name: Vercel pull (production env)
         env:
