chore: update production release workflow to use dotenv-cli for environment variable management

--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -61,7 +61,7 @@ jobs:
           set -euo pipefail
           test -n "$VERCEL_TOKEN"
           test -f .vercel/.env.production.local
-          bunx dotenv -e .vercel/.env.production.local -- \
+          bunx dotenv-cli -e .vercel/.env.production.local -- \
             bunx vercel@latest build --prod --token="$VERCEL_TOKEN"
 
       - name: Run Drizzle migrations (prod)
