chore: update example environment file and gitignore for production deployment

--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -34,35 +34,44 @@ jobs:
       - name: Quality check
         run: bun run check
 
-      - name: Vercel pull (production env)
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-        run: |
-          set -euo pipefail
-          test -n "$VERCEL_TOKEN"
-          test -n "$VERCEL_ORG_ID"
-          test -n "$VERCEL_PROJECT_ID"
-          bunx vercel@latest pull --yes --environment=production --token="$VERCEL_TOKEN"
-
       - name: Compute build version
         run: |
-          set -euo pipefail
           v="${GITHUB_SHA::12}"
           echo "NEXT_PUBLIC_BNF_VERSION=$v" >> "$GITHUB_ENV"
-          echo "NEXT_PUBLIC_BNF_VERSION=$v"
 
       - name: Vercel build (prod) → .vercel/output
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          
           NEXT_PUBLIC_BNF_VERSION: ${{ env.NEXT_PUBLIC_BNF_VERSION }}
+          BNF_VERSION: ${{ env.NEXT_PUBLIC_BNF_VERSION }}
+          
+          BNF_NEON_DATABASE_URL: ${{ secrets.BNF_NEON_DATABASE_URL }}
+          BNF_HEARTS_SALT: ${{ secrets.BNF_HEARTS_SALT }}
+          BNF_CHECKIN_SECRET: ${{ secrets.BNF_CHECKIN_SECRET }}
+          BNF_TURNSTILE_SECRET_KEY: ${{ secrets.BNF_TURNSTILE_SECRET_KEY }}
+          NEXT_PUBLIC_BNF_TURNSTILE_SITE_KEY: ${{ secrets.NEXT_PUBLIC_BNF_TURNSTILE_SITE_KEY }}
+          BNF_RESEND_API_KEY: ${{ secrets.BNF_RESEND_API_KEY }}
+          BNF_RESEND_FROM: ${{ secrets.BNF_RESEND_FROM }}
+          BNF_RESEND_AUTH_FROM: ${{ secrets.BNF_RESEND_AUTH_FROM }}
+          BNF_OTP_SECRET: ${{ secrets.BNF_OTP_SECRET }}
+          BNF_JWT_PRIVATE_KEY: ${{ secrets.BNF_JWT_PRIVATE_KEY }}
+          BNF_JWT_PUBLIC_KEY: ${{ secrets.BNF_JWT_PUBLIC_KEY }}
+          BNF_JWT_ISSUER: ${{ secrets.BNF_JWT_ISSUER }}
+          BNF_JWT_AUDIENCE: ${{ secrets.BNF_JWT_AUDIENCE }}
+          BNF_JWT_KEY_ID: ${{ secrets.BNF_JWT_KEY_ID }}
+          BNF_LOG_SALT: ${{ secrets.BNF_LOG_SALT }}
+          BNF_WEBAUTHN_RP_ID: ${{ secrets.BNF_WEBAUTHN_RP_ID }}
+          BNF_WEBAUTHN_RP_NAME: ${{ secrets.BNF_WEBAUTHN_RP_NAME }}
+          BNF_WEBAUTHN_ORIGIN: ${{ secrets.BNF_WEBAUTHN_ORIGIN }}
+          CRON_SECRET: ${{ secrets.CRON_SECRET }}
+          BNF_ROLLBAR_SERVER_TOKEN: ${{ secrets.BNF_ROLLBAR_SERVER_TOKEN }}
+          NEXT_PUBLIC_BNF_ROLLBAR_CLIENT_TOKEN: ${{ secrets.NEXT_PUBLIC_BNF_ROLLBAR_CLIENT_TOKEN }}
         run: |
           set -euo pipefail
-          test -n "$VERCEL_TOKEN"
-          test -f .vercel/.env.production.local
-          bunx dotenv-cli -e .vercel/.env.production.local -- \
-            bunx vercel@latest build --prod --token="$VERCEL_TOKEN"
+          bunx vercel@latest build --prod --token="$VERCEL_TOKEN"
 
       - name: Run Drizzle migrations (prod)
         env:
@@ -75,9 +84,9 @@ jobs:
       - name: Vercel deploy prebuilt (prod)
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
         run: |
-          set -euo pipefail
-          test -n "$VERCEL_TOKEN"
           bunx vercel@latest deploy --prebuilt --prod --token="$VERCEL_TOKEN"
 
       - name: Smoke check (health + exact version)
