--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,12 @@ BNF_JWT_ISSUER=
 BNF_JWT_AUDIENCE=
 BNF_JWT_KEY_ID=
 BNF_LOG_SALT=
-BNF_WEBAUTHN_RP_ID=localhost
-BNF_WEBAUTHN_RP_NAME=Bonfire
-BNF_WEBAUTHN_ORIGIN=http://localhost:3000
+BNF_WEBAUTHN_RP_ID=
+BNF_WEBAUTHN_RP_NAME=
+BNF_WEBAUTHN_ORIGIN=
 CRON_SECRET=
 BNF_ROLLBAR_SERVER_TOKEN=
 NEXT_PUBLIC_BNF_ROLLBAR_CLIENT_TOKEN=
 BNF_VERSION=
 NEXT_PUBLIC_BNF_VERSION=
+PROD_URL=
