--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 BNF_NEON_DATABASE_URL=
+BNF_NEON_MIGRATION_DATABASE_URL=
 BNF_HEARTS_SALT=
 BNF_CHECKIN_SECRET=
 BNF_TURNSTILE_SECRET_KEY=
@@ -17,6 +18,7 @@ BNF_WEBAUTHN_RP_ID=
 BNF_WEBAUTHN_RP_NAME=
 BNF_WEBAUTHN_ORIGIN=
 CRON_SECRET=
+BNF_ROLLBAR_POST_SERVER_TOKEN=
 BNF_ROLLBAR_SERVER_TOKEN=
 NEXT_PUBLIC_BNF_ROLLBAR_CLIENT_TOKEN=
 BNF_VERSION=
