--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Production release
         env:
+          BNF_ROLLBAR_POST_SERVER_TOKEN: ${{ secrets.BNF_ROLLBAR_POST_SERVER_TOKEN }}
+          PROD_URL: ${{ vars.PROD_URL }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
