feat: add support for newsletter email sender configuration and update email sending logic

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ NEXT_PUBLIC_BNF_TURNSTILE_SITE_KEY=
 BNF_RESEND_API_KEY=
 BNF_RESEND_FROM=
 BNF_RESEND_AUTH_FROM=
+BNF_RESEND_NEWSLETTER_FROM=
 BNF_OTP_SECRET=
 BNF_JWT_PRIVATE_KEY=
 BNF_JWT_PUBLIC_KEY=
