--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           bun-version: latest
 
+      - uses: actions/cache@v5
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('bun.lockb') }}
+
       - name: Install deps
         run: bun install --frozen-lockfile
 
