--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -26,11 +26,13 @@ jobs:
           bun-version: latest
 
       - uses: actions/cache@v5
+        id: cache-deps
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('bun.lockb') }}
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('bun.lock') }}
 
       - name: Install deps
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: bun install --frozen-lockfile
 
       - name: Quality check
