--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -29,7 +29,7 @@ jobs:
         id: cache-deps
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('bun.lock') }}
+          key: ${{ runner.os }}-${{ runner.arch }}-node-modules-${{ hashFiles('bun.lock') }}
 
       - name: Install deps
         if: steps.cache-deps.outputs.cache-hit != 'true'
