--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jose": "^6.1.3",
     "next": "^16.1.6",
     "next-intl": "^4.8.1",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
     "react": "19.2.4",
